<resources>
    <string name="app_name">Text1</string>
    <string name="title_activity_chart">Chart</string>
    <string name="desc">描述#8230</string>
    <string name="description">这是一张图</string>
    <string name="chart">chart</string>
    <string name="usernameDesc">账号</string>
    <string name="username">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="passwordDesc">密码</string>
    <string name="login">登录</string>
    <string name="visitor">visitor1</string>
    <string name="taobao1234">taobao1234</string>
</resources>
