<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffff00"
            android:gravity="center"
            android:text="@string/usernameDesc"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_widthPercent="30%w" />

        <EditText
            android:maxLines="1"
            android:maxLength="20"
            android:paddingStart="10dp"
            android:id="@+id/username"
            android:layout_width="0dp"
            android:text="@string/visitor"
            android:paddingEnd="0dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:hint="@string/username"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_widthPercent="70%w" />

    </com.zhy.android.percent.support.PercentLinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"/>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffff00"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/passwordDesc"
            android:textColor="#000000"
            app:layout_widthPercent="30%w" />

        <EditText
            android:maxLength="20"
            android:maxLines="1"
            android:text="@string/taobao1234"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:hint="@string/password"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_widthPercent="70%w" />

    </com.zhy.android.percent.support.PercentLinearLayout>

    <Button
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="login"
        android:text="@string/login" />


</LinearLayout>
